<resources>
    <string name="app_name">Material Design</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_get_donors">Get Donors</string>
    <string name="nav_item_donate_blood">Donate Blood</string>
    <string name="nav_item_blood_banks">Blood Banks</string>
    <string name="nav_item_badges">Badges</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_get_donors</item>
        <item>@string/nav_item_donate_blood</item>
        <item>@string/nav_item_blood_banks</item>
        <item>@string/nav_item_badges</item>
    </string-array>

    <string name="title_home">Home</string>
    <string name="title_get_donors">Get Donors</string>
    <string name="title_donate_blood">Donate Blood</string>
    <string name="title_blood_banks">Blood Banks</string>
    <string name="title_badges">Badges</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_phone">Phone No.</string>
    <string name="prompt_zip_code">Zip Code</string>
    <string name="prompt_blood_group">Blood Group</string>
    <string name="action_register">Register</string>
    <string name="action_register_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string-array name="prompt_blood_groups">
        <item>Choose your Blood Group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_activity_city_location">CityLocation</string>

</resources>